# serd-nwp-postprocessing

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: serd_v1.yaml
configs/table2/: README.md  corrdiff.yaml  direct_diffusion_fcrps.yaml  gridleadbias.yaml  ngr_like_gaussian_mos.yaml  raw_cmagfs.yaml  serd.yaml  twostage_no_fcrps.yaml
docs/: EXPERIMENT_DESIGN.md
scripts/: build_stage2_residuals.py  evaluate_ensemble.py  evaluate_raw_cmagfs.py  infer_direct_diffusion_fcrps.py  infer_ngr_baseline.py  infer_stage1_mean.py  infer_stage2_serd.py  infer_twostage_no_fcrps.py  run_serd_v1_pipeline.sh  run_table2_all.sh  run_table2_corrdiff.sh  run_table2_direct_diffusion_fcrps.sh  run_table2_gridleadbias.sh  run_table2_ngr_like_gaussian_mos.sh  run_table2_raw_cmagfs.sh  run_table2_serd.sh  run_table2_twostage_no_fcrps.sh  train_corrdiff_diffusion.py  train_corrdiff_stage1.py  train_direct_diffusion_fcrps.py  train_gridleadbias.py  train_ngr_baseline.py  train_stage1_mean.py  train_stage2_serd.py  train_twostage_no_fcrps.py
serd/: __init__.py
serd/data/: __init__.py  forecast_analysis_dataset.py  forecast_error_dataset.py  normalizer_forecast.py
serd/models/: __init__.py  forecast_mean_unet.py  physcond_error_diffusion.py
serd/utils/: __init__.py  splits.py
