[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serd-nwp-postprocessing"
version = "0.1.0"
description = "Systematic-error-corrected residual diffusion for probabilistic NWP post-processing."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["serd*"]
